<resources>
    <string name="app_name">MavPark</string>
    <string name="title_activity_login">MavPark</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email (student@mavs.uta.edu)</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirmPassword">Confirm password</string>
    <string name="prompt_name">FirstName LastName</string>
    <string name="prompt_utaId">UTA ID (100XXXXXXX)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MavPark</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="parking_lots_array">
        <item>Parking Lot P01</item>
        <item>Parking Lot P02</item>
        <item>Parking Lot P03</item>
        <item>Parking Lot P04</item>
        <item>Parking Lot P05</item>
        <item>Parking Lot P06</item>
        <item>Parking Lot P07</item>
        <item>Parking Lot P08</item>
    </string-array>
</resources>
